--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ supabase>=2.0.2 #supabase client for databse operations
 fastapi>=0.104.1 #Backend API framework
 uvicorn>=0.24.0 #ASGI server for FastAPI
 python-dotenv>=1.0.0 #Environment variable management
+plotly>=5.0.0
+
                                                                  
